# freak

./: CMakeLists.txt
demo/: CMakeLists.txt  freak_demo.cpp
src/: CMakeLists.txt  freak.cpp  freak.h  hammingseg.h
src3/: CMakeLists.txt  freak.cpp  freak.h
